--- a/3-days-yoga-retreats.html
+++ b/3-days-yoga-retreats.html
@@ -180,13 +180,13 @@
 
                         <!-- Overview Section -->
                         <div id="overview" class="mb-5 wow fadeInUp" data-wow-delay="0.1s">
-                            <div class="p-4 bg-light rounded shadow-sm wow fadeInUp" data-wow-delay="0.2s">
+                            <div class="p-4 rounded shadow-sm wow fadeInUp" data-wow-delay="0.2s">
                                 <h2 class="text-dark mb-4">3 Days Yoga Retreat - Overview</h2>
                                 <hr class="custom-underline">
                                 <div class="row g-4">
                                     <!-- Card 1: Yoga Retreat -->
                                     <div class="col-md-4">
-                                        <div class="card border-0 shadow-sm hover-card theme-design-high">
+                                        <div class="card border-0 shadow-sm hover-card">
                                             <div class="card-body text-center">
                                                 <i class="fas fa-spa fa-3x text-theme mb-3"></i>
                                                 <h5 class="card-title mb-2">Yoga Retreat</h5>
@@ -196,7 +196,7 @@
                                     </div>
                                     <!-- Card 2: Duration -->
                                     <div class="col-md-4">
-                                        <div class="card border-0 shadow-sm hover-card theme-design-high">
+                                        <div class="card border-0 shadow-sm hover-card">
                                             <div class="card-body text-center">
                                                 <i class="fas fa-clock fa-3x text-theme mb-3"></i>
                                                 <h5 class="card-title mb-2">Duration</h5>
@@ -206,7 +206,7 @@
                                     </div>
                                     <!-- Card 3: Accommodation -->
                                     <div class="col-md-4">
-                                        <div class="card border-0 shadow-sm hover-card theme-design-high">
+                                        <div class="card border-0 shadow-sm hover-card">
                                             <div class="card-body text-center">
                                                 <i class="fas fa-bed fa-3x text-theme mb-3"></i>
                                                 <h5 class="card-title mb-2">Accommodation</h5>
@@ -216,7 +216,7 @@
                                     </div>
                                     <!-- Card 4: Food -->
                                     <div class="col-md-4">
-                                        <div class="card border-0 shadow-sm hover-card theme-design-high">
+                                        <div class="card border-0 shadow-sm hover-card">
                                             <div class="card-body text-center">
                                                 <i class="fas fa-utensils fa-3x text-theme mb-3"></i>
                                                 <h5 class="card-title mb-2">Food</h5>
@@ -226,7 +226,7 @@
                                     </div>
                                     <!-- Card 5: Language of Instruction -->
                                     <div class="col-md-4">
-                                        <div class="card border-0 shadow-sm hover-card theme-design-high">
+                                        <div class="card border-0 shadow-sm hover-card">
                                             <div class="card-body text-center">
                                                 <i class="fas fa-language fa-3x text-theme mb-3"></i>
                                                 <h5 class="card-title mb-2">Language of Instruction</h5>
@@ -236,7 +236,7 @@
                                     </div>
                                     <!-- Card 6: Location -->
                                     <div class="col-md-4">
-                                        <div class="card border-0 shadow-sm hover-card theme-design-high">
+                                        <div class="card border-0 shadow-sm hover-card">
                                             <div class="card-body text-center">
                                                 <i class="fas fa-map-marker-alt fa-3x text-theme mb-3"></i>
                                                 <h5 class="card-title mb-2">Location</h5>
