--- a/3-days-yoga-retreats.html
+++ b/3-days-yoga-retreats.html
@@ -173,7 +173,7 @@
                                     3 Days Yoga Retreat in Rishikesh is to instill curiosity in one and all about yoga, meditation, and the yogic lifestyle.
                                 </p>
                                 <div class="text-center">
-                                    <img src="images/yogahall3.jpg" class="img-fluid rounded" alt="3 Days Yoga Retreat">
+                                    <img src="images/retreat-1.jpg" class="img-fluid rounded" alt="3 Days Yoga Retreat">
                                 </div>
                             </div>
                         </div>
@@ -243,42 +243,6 @@
                                                 <p class="card-text">Rishikesh, India</p>
                                             </div>
                                         </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <!-- Highlights Section -->
-                        <div id="highlights" class="mb-5 wow fadeInUp" data-wow-delay="0.1s">
-                            <div class="p-4 bg-white rounded shadow-sm wow fadeInUp" data-wow-delay="0.2s">
-                                <h2 class="text-dark mb-4">3 Days Yoga Retreat - Highlights</h2>
-                                <hr class="custom-underline">
-                                <div class="row">
-                                    <!-- Left Side Image -->
-                                    <div class="col-lg-6 mb-4">
-                                        <img src="images/service-detail-02.jpg" alt="Yoga Retreat Highlights" class="img-fluid rounded">
-                                    </div>
-
-                                    <!-- Right Side List -->
-                                    <div class="col-lg-6">
-                                        <ul class="list-group list-group-flush highlights-list">
-                                            <li class="list-group-item d-flex align-items-center">
-                                                <i class="fas fa-water fa-lg text-theme me-3"></i>
-                                                <span>Yogic internal body cleansing</span>
-                                            </li>
-                                            <li class="list-group-item d-flex align-items-center">
-                                                <i class="fas fa-praying-hands fa-lg text-theme me-3"></i>
-                                                <span>A brief introduction to yogic asanas, meditation techniques, and yogic philosophies</span>
-                                            </li>
-                                            <li class="list-group-item d-flex align-items-center">
-                                                <i class="fas fa-hiking fa-lg text-theme me-3"></i>
-                                                <span>Trekking to Temple and/or a Waterfall to soak in nature along with the pristine atmosphere of the Yogpeeth</span>
-                                            </li>
-                                            <li class="list-group-item d-flex align-items-center">
-                                                <i class="fas fa-book-open fa-lg text-theme me-3"></i>
-                                                <span>Spiritual and Philosophical discussion on learnings from Bhagwad Gita, Upanishads, and Patanjali Yogasutra among others</span>
-                                            </li>
-                                        </ul>
                                     </div>
                                 </div>
                             </div>
@@ -360,11 +324,7 @@
                                 <h2 class="text-dark mb-4">3 Days Yoga Retreat - Eligibility</h2>
                                 <hr class="custom-underline">
                                 <div class="row">
-                                    <!-- Left Side Image -->
-                                    <div class="col-lg-5 mb-3">
-                                        <img src="images/service-detail-02.jpg" alt="Eligibility Image" class="img-fluid rounded">
-                                    </div>
-                                    <!-- Right Side List -->
+
                                     <div class="col-lg-7">
                                         <p class="fw-bold">You can enroll in the retreat if you:</p>
                                         <ul class="list-group list-group-flush eligibility-list">
@@ -385,6 +345,10 @@
                                                 <span>Planning to spend some time in nature and connect to your inner self</span>
                                             </li>
                                         </ul>
+                                    </div>
+
+                                    <div class="col-lg-5 mb-3">
+                                        <img src="images/retreat-fee.jpg" alt="Eligibility Image" class="img-fluid">
                                     </div>
                                 </div>
                             </div>
