--- a/5-days-yoga-retreats.html
+++ b/5-days-yoga-retreats.html
@@ -45,29 +45,6 @@
 			</a>
 		</div>	
 
-		<!-- Topbar Section 
-		<div class="container-fluid bg-grey px-5 d-none d-lg-block">
-			<div class="row gx-0">
-				<div class="col-lg-8 text-center text-lg-start mb-2 mb-lg-0">
-					<div class="d-inline-flex align-items-center" style="height: 45px;">
-						<a class="me-3 text-dark" href="https://www.google.com/maps/place/India"><i class="fa fa-map-marker-alt me-2"></i>123 Street, India</a>
-						<a class="me-3 text-dark" href="tel:+12345678"><i class="bi bi-telephone me-2"></i>+12345678</a>
-						<a class="me-3 text-dark" href="mailto:info@example.com"><i class="fa fa-envelope-open me-2"></i>info@example.com</a>
-					</div>
-				</div>
-				<div class="col-lg-4 text-center text-lg-end">
-					<div class="d-inline-flex align-items-center" style="height: 45px;">
-						<a class="btn hover-fill btn-sm btn-outline-dark btn-sm-square rounded-circle me-2" href=""><i class="fab fa-twitter fw-normal"></i></a>
-						<a class="btn hover-fill btn-sm btn-outline-dark btn-sm-square rounded-circle me-2" href=""><i class="fab fa-facebook-f fw-normal"></i></a>
-						<a class="btn hover-fill btn-sm btn-outline-dark btn-sm-square rounded-circle me-2" href=""><i class="fab fa-linkedin-in fw-normal"></i></a>
-						<a class="btn hover-fill btn-sm btn-outline-dark btn-sm-square rounded-circle me-2" href=""><i class="fab fa-instagram fw-normal"></i></a>
-						<a class="btn hover-fill btn-sm btn-outline-dark btn-sm-square rounded-circle" href=""><i class="fab fa-youtube fw-normal"></i></a>
-					</div>
-				</div>
-			</div>
-		</div>
-		-->
-
 		<!-- Header Section -->
 		<header class="container-fluid position-relative p-0">
 			<!-- Navbar Section -->
@@ -163,16 +140,16 @@
                     <!-- Right Side Content - col-lg-6 -->
                     <div class="col-lg-9">
 
-                        <!-- Top Section for 3 Days Yoga Retreat in Rishikesh -->
+                        <!-- Top Section for 5 Days Yoga Retreat in Rishikesh -->
                         <div id="yoga-retreat-intro" class="mb-5 wow fadeInUp" data-wow-delay="0.1s">
                             <div class="p-4 bg-white rounded shadow-sm">
-                                <h2 class="text-dark mb-4 fw-bold">5 Days Yoga Retreat</h2>
+                                <h2 class="text-dark mb-4 fw-bold"><span class="text-theme fw-bold">5</span> Days Yoga Retreat</h2>
                                 <hr class="custom-underline">
                                 <p class="fw-bold mb-4">
                                     Join us at Himalayan Yoga Retreats for a deeper dive into yoga and meditation with our 5 Days Yoga Retreat. This retreat is designed for those who wish to explore a more immersive yoga experience in the tranquil surroundings of Rishikesh. Ideal for both beginners and experienced yogis, this program offers an extended opportunity to deepen your practice, relax, and rejuvenate.
                                 </p>
                                 <div class="text-center">
-                                    <img src="images/yoga-retreats.jpg" class="img-fluid rounded" alt="3 Days Yoga Retreat">
+                                    <img src="images/yoga-retreats.jpg" class="img-fluid rounded" alt="5 Days Yoga Retreat">
                                 </div>
                             </div>
                         </div>
@@ -180,8 +157,9 @@
                         <!-- Overview Section -->
                         <div id="overview" class="mb-5 wow fadeInUp" data-wow-delay="0.1s">
                             <div class="p-4 rounded shadow-sm wow fadeInUp" data-wow-delay="0.2s">
-                                <h2 class="text-dark mb-4 fw-bold">Overview</h2>
+                                <h2 class="text-dark mb-4 fw-bold"><span class="text-theme fw-bold">O</span>verview</h2>
                                 <hr class="custom-underline">
+                                <p>Explore the detailed overview of our 5 Days Yoga Retreat, crafted to provide a balanced combination of yoga, meditation, and exploration. This program is perfect for anyone looking to deepen their practice in a serene environment.</p>
                                 <div class="row g-4">
                                     <!-- Card 1: Yoga Retreat -->
                                     <div class="col-md-4">
@@ -247,11 +225,12 @@
                             </div>
                         </div>
 
-                        <!-- Date & Fee Details Section -->
+                        <!-- Fee Details Section -->
                         <div id="fee-detail" class="mb-5 wow fadeInUp" data-wow-delay="0.1s">
                             <div class="p-4 bg-white rounded shadow-sm wow fadeInUp" data-wow-delay="0.2s">
-                                <h2 class="text-dark mb-4">Fee Details</h2>
+                                <h2 class="text-dark mb-4 fw-bold"><span class="text-theme fw-bold">F</span>ee Details</h2>
                                 <hr class="custom-underline">
+                                <p>Find out all you need to know about the fees for our 5 Days Yoga Retreat, designed to cater to both domestic and international visitors, ensuring a comprehensive and fulfilling experience.</p>
                                 <div class="row align-items-center">
                                     <!-- Fee Section as Cards -->
                                     <div class="col-lg-6 mb-4">
@@ -316,8 +295,9 @@
                         <!-- Eligibility Section -->
                         <div id="eligibility" class="mb-5 wow fadeInUp" data-wow-delay="0.1s">
                             <div class="p-4 bg-white rounded shadow-sm wow fadeInUp" data-wow-delay="0.2s">
-                                <h2 class="text-dark mb-4">Eligibility</h2>
+                                <h2 class="text-dark mb-4 fw-bold"><span class="text-theme fw-bold">E</span>ligibility</h2>
                                 <hr class="custom-underline">
+                                <p>Discover who is eligible to join our 5 Days Yoga Retreat. This retreat is open to individuals of all ages and experience levels who are seeking to deepen their yoga practice and connect with nature.</p>
                                 <div class="row">
 
                                     <div class="col-lg-7">
@@ -352,8 +332,9 @@
                         <!-- Daily Schedule Section -->
                         <div id="daily-schedule" class="mb-5 wow fadeInUp" data-wow-delay="0.1s">
                             <div class="p-4 bg-white rounded shadow-sm wow fadeInUp" data-wow-delay="0.2s">
-                                <h2 class="text-dark mb-4">Daily Schedule</h2>
+                                <h2 class="text-dark mb-4 fw-bold"><span class="text-theme fw-bold">D</span>aily Schedule</h2>
                                 <hr class="custom-underline">
+                                <p>Explore the daily schedule of our 5 Days Yoga Retreat to understand how each day is thoughtfully curated to offer a balanced blend of yoga, relaxation, and exploration.</p>
                                 <div class="table-responsive">
                                     <table class="table table-hover table-striped daily-schedule-table">
                                         <thead class="table-theme">
@@ -502,8 +483,9 @@
                         <!-- Accommodation Section -->
                         <div id="accommodation" class="mb-5 wow fadeInUp" data-wow-delay="0.1s">
                             <div class="p-4 bg-white rounded shadow-sm wow fadeInUp" data-wow-delay="0.2s">
-                                <h2 class="text-dark mb-4 fw-bold">Accommodation</h2>
+                                <h2 class="text-dark mb-4 fw-bold"><span class="text-theme fw-bold">A</span>ccommodation</h2>
                                 <hr class="custom-underline">
+                                <p>Learn about our comfortable and serene accommodation options that provide a restful retreat. Choose between different room types, all designed to enhance your stay with us and help you feel at home.</p>
                                 <div class="row">
                                     <!-- First Carousel for Accommodation Option 1 -->
                                     <div class="col-lg-6 mb-4">
