--- a/3-days-yoga-retreats.html
+++ b/3-days-yoga-retreats.html
@@ -45,29 +45,6 @@
 			</a>
 		</div>	
 
-		<!-- Topbar Section 
-		<div class="container-fluid bg-grey px-5 d-none d-lg-block">
-			<div class="row gx-0">
-				<div class="col-lg-8 text-center text-lg-start mb-2 mb-lg-0">
-					<div class="d-inline-flex align-items-center" style="height: 45px;">
-						<a class="me-3 text-dark" href="https://www.google.com/maps/place/India"><i class="fa fa-map-marker-alt me-2"></i>123 Street, India</a>
-						<a class="me-3 text-dark" href="tel:+12345678"><i class="bi bi-telephone me-2"></i>+12345678</a>
-						<a class="me-3 text-dark" href="mailto:info@example.com"><i class="fa fa-envelope-open me-2"></i>info@example.com</a>
-					</div>
-				</div>
-				<div class="col-lg-4 text-center text-lg-end">
-					<div class="d-inline-flex align-items-center" style="height: 45px;">
-						<a class="btn hover-fill btn-sm btn-outline-dark btn-sm-square rounded-circle me-2" href=""><i class="fab fa-twitter fw-normal"></i></a>
-						<a class="btn hover-fill btn-sm btn-outline-dark btn-sm-square rounded-circle me-2" href=""><i class="fab fa-facebook-f fw-normal"></i></a>
-						<a class="btn hover-fill btn-sm btn-outline-dark btn-sm-square rounded-circle me-2" href=""><i class="fab fa-linkedin-in fw-normal"></i></a>
-						<a class="btn hover-fill btn-sm btn-outline-dark btn-sm-square rounded-circle me-2" href=""><i class="fab fa-instagram fw-normal"></i></a>
-						<a class="btn hover-fill btn-sm btn-outline-dark btn-sm-square rounded-circle" href=""><i class="fab fa-youtube fw-normal"></i></a>
-					</div>
-				</div>
-			</div>
-		</div>
-		-->
-
 		<!-- Header Section -->
 		<header class="container-fluid position-relative p-0">
 			<!-- Navbar Section -->
@@ -93,7 +70,7 @@
 						<div class="nav-item dropdown">
 							<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Locations</a>
 							<div class="dropdown-menu m-0">
-								<a href="#" class="dropdown-item">Rishikesh</a>
+								<a href="rishikesh-location.html" class="dropdown-item">Rishikesh</a>
 								<a href="#" class="dropdown-item">Dehradun</a>
 								<a href="#" class="dropdown-item">Haridhwar</a>
 							</div>
@@ -159,14 +136,13 @@
                         </div>
                     </div>
 
-
                     <!-- Right Side Content - col-lg-6 -->
                     <div class="col-lg-9">
 
                         <!-- Top Section for 3 Days Yoga Retreat in Rishikesh -->
                         <div id="yoga-retreat-intro" class="mb-5 wow fadeInUp" data-wow-delay="0.1s">
                             <div class="p-4 bg-white rounded shadow-sm">
-                                <h2 class="text-dark mb-4 fw-bold">3 Days Yoga Retreat</h2>
+                                <h2 class="text-dark mb-4 fw-bold"><span class="text-theme fw-bold">3</span> Days Yoga Retreat</h2>
                                 <hr class="custom-underline">
                                 <p class="fw-bold mb-4">
                                     Discover the peaceful surroundings of Rishikesh with our 3 Days Yoga Retreat at Himalayan Yoga Retreats. This short but enriching experience is perfect for anyone looking to dive into the world of yoga and meditation. Whether you're a beginner or a seasoned practitioner, you'll enjoy a mix of yoga sessions, meditation, and meaningful activities in the calm and beautiful Himalayan foothills.
@@ -180,8 +156,9 @@
                         <!-- Overview Section -->
                         <div id="overview" class="mb-5 wow fadeInUp" data-wow-delay="0.1s">
                             <div class="p-4 rounded shadow-sm wow fadeInUp" data-wow-delay="0.2s">
-                                <h2 class="text-dark mb-4 fw-bold">Overview</h2>
+                                <h2 class="text-dark mb-4 fw-bold"><span class="text-theme fw-bold">O</span>verview</h2>
                                 <hr class="custom-underline">
+                                <p>Discover the essence of our yoga retreats, designed to provide a comprehensive introduction to yoga and meditation practices, set in the tranquil surroundings of the Himalayas. Learn what makes our retreats unique and how they cater to both beginners and seasoned practitioners.</p>
                                 <div class="row g-4">
                                     <!-- Card 1: Yoga Retreat -->
                                     <div class="col-md-4">
@@ -250,8 +227,9 @@
                         <!-- Date & Fee Details Section -->
                         <div id="fee-detail" class="mb-5 wow fadeInUp" data-wow-delay="0.1s">
                             <div class="p-4 bg-white rounded shadow-sm wow fadeInUp" data-wow-delay="0.2s">
-                                <h2 class="text-dark mb-4">Fee Details</h2>
+                                <h2 class="text-dark mb-4"><span class="text-theme fw-bold">F</span>ee Details</h2>
                                 <hr class="custom-underline">
+                                <p>Find out all you need to know about the fees for our yoga retreats, tailored to meet the needs of both Indian and international guests. Explore the various inclusions that ensure a holistic and enriching experience during your stay.</p>
                                 <div class="row align-items-center">
                                     <!-- Fee Section as Cards -->
                                     <div class="col-lg-6 mb-4">
@@ -320,8 +298,9 @@
                         <!-- Eligibility Section -->
                         <div id="eligibility" class="mb-5 wow fadeInUp" data-wow-delay="0.1s">
                             <div class="p-4 bg-white rounded shadow-sm wow fadeInUp" data-wow-delay="0.2s">
-                                <h2 class="text-dark mb-4">Eligibility</h2>
+                                <h2 class="text-dark mb-4"><span class="text-theme fw-bold">E</span>ligibility</h2>
                                 <hr class="custom-underline">
+                                <p>Understand who can join our yoga retreats. Whether you are new to yoga or an experienced practitioner, our retreats are open to everyone looking to deepen their practice and explore a yogic lifestyle.</p>
                                 <div class="row">
 
                                     <div class="col-lg-7">
@@ -356,8 +335,9 @@
                         <!-- Daily Schedule Section -->
                         <div id="daily-schedule" class="mb-5 wow fadeInUp" data-wow-delay="0.1s">
                             <div class="p-4 bg-white rounded shadow-sm wow fadeInUp" data-wow-delay="0.2s">
-                                <h2 class="text-dark mb-4">Daily Schedule</h2>
+                                <h2 class="text-dark mb-4"><span class="text-theme fw-bold">D</span>aily Schedule</h2>
                                 <hr class="custom-underline">
+                                <p>Get a glimpse of a typical day at our yoga retreats. From sunrise yoga sessions to evening meditation, each day is thoughtfully curated to offer a balanced blend of practice, rest, and exploration.</p>
                                 <div class="table-responsive">
                                     <table class="table table-hover table-striped daily-schedule-table">
                                         <thead class="table-theme">
@@ -453,8 +433,9 @@
                         <!-- Accommodation Section -->
                         <div id="accommodation" class="mb-5 wow fadeInUp" data-wow-delay="0.1s">
                             <div class="p-4 bg-white rounded shadow-sm wow fadeInUp" data-wow-delay="0.2s">
-                                <h2 class="text-dark mb-4 fw-bold">Accommodation</h2>
+                                <h2 class="text-dark mb-4 fw-bold"><span class="text-theme fw-bold">A</span>ccommodation</h2>
                                 <hr class="custom-underline">
+                                <p>Learn about our comfortable and serene accommodation options that provide a restful retreat. Choose between different room types, all designed to enhance your stay with us and help you feel at home.</p>
                                 <div class="row">
                                     <!-- First Carousel for Accommodation Option 1 -->
                                     <div class="col-lg-6 mb-4">
