--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 		<header class="container-fluid position-relative p-0">
 			<!-- Navbar Section -->
 			<nav class="navbar navbar-expand-lg navbar-dark px-4 py-3 py-lg-0">
-				<a href="/" class="navbar-brand p-0">
+				<a href="index.html" class="navbar-brand p-0">
 					<img src='images/logo.jpeg' alt="Logo" rel="preload" class="navbar-brand-image" />
 				</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -80,7 +80,7 @@
 				</button>
 				<div class="collapse navbar-collapse" id="navbarCollapse">
 					<div class="navbar-nav ms-auto py-0">
-						<a href="/" class="nav-item nav-link active">Home</a>
+						<a href="index.html" class="nav-item nav-link active">Home</a>
 						<a href="about.html" class="nav-item nav-link">About Us</a>
 						<div class="nav-item dropdown">
 							<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Yoga Retreats</a>
@@ -93,9 +93,9 @@
 						<div class="nav-item dropdown">
 							<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Locations</a>
 							<div class="dropdown-menu m-0">
-								<a href="location-rishikesh.html" class="dropdown-item">Rishikesh</a>
-								<a href="location-chopta.html" class="dropdown-item">Chopta</a>
-								<a href="location-himalaya.html" class="dropdown-item">Himalaya</a>
+								<a href="rishikesh-location.html" class="dropdown-item">Rishikesh</a>
+								<a href="chopta-location.html" class="dropdown-item">Chopta</a>
+								<a href="himalaya-location.html" class="dropdown-item">Himalaya</a>
 							</div>
 						</div>
 						<a href="contact.html" class="nav-item nav-link">Contact Us</a>
