--- a/rishikesh-location.html
+++ b/rishikesh-location.html
@@ -63,9 +63,9 @@
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Locations</a>
                         <div class="dropdown-menu m-0">
-                            <a href="rishikesh.html" class="dropdown-item active">Rishikesh</a>
-                            <a href="chopta.html" class="dropdown-item">Chopta</a>
-                            <a href="himalaya.html" class="dropdown-item">Himalaya</a>
+                            <a href="rishikesh-location.html" class="dropdown-item">Rishikesh</a>
+							<a href="chopta-location.html" class="dropdown-item">Chopta</a>
+							<a href="himalaya-location.html" class="dropdown-item">Himalaya</a>
                         </div>
                     </div>
                     <a href="contact.html" class="nav-item nav-link">Contact Us</a>
