--- a/3-days-yoga-retreats.html
+++ b/3-days-yoga-retreats.html
@@ -57,13 +57,13 @@
 				</button>
 				<div class="collapse navbar-collapse" id="navbarCollapse">
 					<div class="navbar-nav ms-auto py-0">
-						<a href="/" class="nav-item nav-link active">Home</a>
+						<a href="index.html" class="nav-item nav-link active">Home</a>
 						<a href="about.html" class="nav-item nav-link">About Us</a>
 						<div class="nav-item dropdown">
 							<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Yoga Retreats</a>
 							<div class="dropdown-menu m-0">
 								<a href="3-days-yoga-retreats.html" class="dropdown-item">3 days yoga retreats</a>
-								<a href="5-days-yoga-retreats.html" class="dropdown-item">5 days yoga retreats</a>
+								<a href="5-days-yoga-retreats.html" class="dropdown-item">4 days yoga retreats</a>
 								<a href="7-days-yoga-retreats.html" class="dropdown-item">7 days yoga retreats</a>
 							</div>
 						</div>
@@ -71,8 +71,8 @@
 							<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Locations</a>
 							<div class="dropdown-menu m-0">
 								<a href="rishikesh-location.html" class="dropdown-item">Rishikesh</a>
-								<a href="#" class="dropdown-item">Dehradun</a>
-								<a href="#" class="dropdown-item">Haridhwar</a>
+								<a href="chopta-location.html" class="dropdown-item">Chopta</a>
+								<a href="himalaya-location.html" class="dropdown-item">Himalaya</a>
 							</div>
 						</div>
 						<a href="contact.html" class="nav-item nav-link">Contact Us</a>
