--- a/7-days-yoga-retreats.html
+++ b/7-days-yoga-retreats.html
@@ -63,16 +63,16 @@
 							<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Yoga Retreats</a>
 							<div class="dropdown-menu m-0">
 								<a href="3-days-yoga-retreats.html" class="dropdown-item">3 days yoga retreats</a>
-								<a href="5-days-yoga-retreats.html" class="dropdown-item">5 days yoga retreats</a>
+								<a href="5-days-yoga-retreats.html" class="dropdown-item">4 days yoga retreats</a>
 								<a href="7-days-yoga-retreats.html" class="dropdown-item">7 days yoga retreats</a>
 							</div>
 						</div>
 						<div class="nav-item dropdown">
 							<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Locations</a>
 							<div class="dropdown-menu m-0">
-								<a href="#" class="dropdown-item">Rishikesh</a>
-								<a href="#" class="dropdown-item">Dehradun</a>
-								<a href="#" class="dropdown-item">Haridhwar</a>
+								<a href="rishikesh-location.html" class="dropdown-item">Rishikesh</a>
+								<a href="chopta-location.html" class="dropdown-item">Chopta</a>
+								<a href="himalaya-location.html" class="dropdown-item">Himalaya</a>
 							</div>
 						</div>
 						<a href="contact.html" class="nav-item nav-link">Contact Us</a>
