--- a/contact.html
+++ b/contact.html
@@ -85,17 +85,17 @@
 						<div class="nav-item dropdown">
 							<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Yoga Retreats</a>
 							<div class="dropdown-menu m-0">
-								<a href="yoga-retreats-1.html" class="dropdown-item">3 days yoga retreats</a>
-								<a href="yoga-retreats-2.html" class="dropdown-item">4 days yoga retreats</a>
-								<a href="yoga-retreats-3.html" class="dropdown-item">6 days yoga retreats</a>
+								<a href="3-days-yoga-retreats.html" class="dropdown-item">3 days yoga retreats</a>
+								<a href="5-days-yoga-retreats.html" class="dropdown-item">4 days yoga retreats</a>
+								<a href="7-days-yoga-retreats.html" class="dropdown-item">7 days yoga retreats</a>
 							</div>
 						</div>
 						<div class="nav-item dropdown">
 							<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Locations</a>
 							<div class="dropdown-menu m-0">
-								<a href="#" class="dropdown-item">Rishikesh</a>
-								<a href="#" class="dropdown-item">Dehradun</a>
-								<a href="#" class="dropdown-item">Haridhwar</a>
+								<a href="rishikesh-location.html" class="dropdown-item">Rishikesh</a>
+								<a href="chopta-location.html" class="dropdown-item">Chopta</a>
+								<a href="himalaya-location.html" class="dropdown-item">Himalaya</a>
 							</div>
 						</div>
 						<a href="contact.html" class="nav-item nav-link">Contact Us</a>
