--- a/about.html
+++ b/about.html
@@ -101,7 +101,7 @@
 						<a href="contact.html" class="nav-item nav-link">Contact Us</a>
 					</div>
 					<!-- Register Now Button -->
-					<a href="register.html" class="btn hover-fill btn-theme theme-design py-md-3 px-md-5 ms-auto">Register Now</a>
+					<a href="registeration.html" class="btn hover-fill btn-theme theme-design py-md-3 px-md-5 ms-auto">Register Now</a>
 				</div>
 			</nav>
 		</header>
