--- a/rishikesh-location.html
+++ b/rishikesh-location.html
@@ -70,7 +70,7 @@
                     </div>
                     <a href="contact.html" class="nav-item nav-link">Contact Us</a>
                 </div>
-                <a href="register.html" class="btn hover-fill btn-theme theme-design py-md-3 px-md-5 ms-auto">Register Now</a>
+                <a href="registeration.html" class="btn hover-fill btn-theme theme-design py-md-3 px-md-5 ms-auto">Register Now</a>
             </div>
         </nav>
     </header>
