--- a/contact.html
+++ b/contact.html
@@ -119,12 +119,12 @@
 		</div>
 
        <!-- Contact Section -->
-<div class="container-fluid py-5 contact"
-style="
-        background-image: url('images/yoga-design-(1).png'), url('images/yoga-design-(2).png'); 
-        background-size: auto, auto; 
-        background-position: top left, bottom right; 
-        background-repeat: no-repeat, no-repeat; ">
+		<div class="container-fluid py-5 contact"
+		style="
+				background-image: url('images/yoga-design-(1).png'), url('images/yoga-design-(2).png'); 
+				background-size: 170px 170px, 170px 170px;
+				background-position: top left, bottom right; 
+				background-repeat: no-repeat, no-repeat; ">
     <div class="container py-5">
         <div class="row g-5">
                         <!-- Yoga Session Details -->
