--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 		<div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s" 
      style="
         background-image: url('images/yoga-design-(1).png'), url('images/yoga-design-(2).png'); 
-        background-size: auto, auto; 
+        background-size: 170px 170px, 170px 170px; 
         background-position: top left, bottom right; 
         background-repeat: no-repeat, no-repeat; ">
 			<div class="container about-section">
