--- a/registeration.html
+++ b/registeration.html
@@ -119,7 +119,14 @@
 		</div>
 
         <!-- Registration Section -->
-         <div class="container-fluid p-5">
+        <div class="container-fluid wow fadeInUp" data-wow-delay="0.1s"
+        style="
+        margin-top:120px; margin-bottom:120px;
+        background-image: url('images/yoga-design-(1).png'), url('images/yoga-design-(2).png'); 
+        background-size: 170px 170px, 170px 170px; 
+        background-position: top left, bottom right; 
+        background-repeat: no-repeat, no-repeat;">
+
             <div class="container registration-container">
                 <div class="row g-0 d-flex align-items-center justify-content-center">
                     <!-- Left Image Section -->
