--- a/about.html
+++ b/about.html
@@ -119,15 +119,15 @@
 		</div>
 
         <!-- About Section -->
-		<div class="container-fluid py-2 wow fadeInUp" data-wow-delay="0.1s"
+		<div class="container-fluid py-5 wow fadeInUp responsive-yoga-design" data-wow-delay="0.1s"
 		style="
         background-image: url('images/yoga-design-(1).png'), url('images/yoga-design-(2).png'); 
-        background-size: 170px 170px, 170px 170px; 
+        background-size: 160px 160px, 160px 160px; 
         background-position: top left, bottom right; 
         background-repeat: no-repeat, no-repeat; ">
 			<div class="container about-section">
-				<div class="row align-items-center">
-					<div class="col-lg-6 mb-5">
+				<div class="row d-flex align-items-center justify-content-center">
+					<div class="col-lg-5 mb-3">
 						<div class="about-image-wrapper position-relative">
 							<div class="background-shape theme-design"></div>
 							<div class="about-image theme-design">
@@ -135,7 +135,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-6 mb-5">
+					<div class="col-lg-7 mb-3">
 						<div class="about-content">
 							<h2 class="mb-4">About Us</h2>
 							<p class="mb-4 text-justify">At Himalayan Yoga Retreat, we invite you to embark on a transformative journey of self-discovery in the heart of Rishikesh, the "Yoga Capital of the World." Nestled along the sacred banks of the Ganges River, our retreat offers a unique opportunity to experience the profound physical, emotional, mental, and spiritual benefits of yoga amidst the serene beauty and spiritual energy of the Himalayas. Guided by experienced instructors, you will deepen your practice with enriching asanas, pranayama, yoga Nidra, and cleansing yogic purification techniques, while exploring meditation methods tailored to your individual needs. This peaceful environment provides the perfect backdrop for awakening inner strength, fostering resilience, and achieving personal growth as you step away from daily stresses and immerse yourself in the healing power of nature, community, and mindful living.</p>
@@ -272,7 +272,7 @@
 		</div>
 
         <!-- Team Section -->
-		<div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s"
+		<div class="container-fluid py-5 wow fadeInUp responsive-yoga-design" data-wow-delay="0.1s"
 		style="
 		background-image: url('images/yoga-design-(1).png'), url('images/yoga-design-(2).png'); 
 		background-size: 170px 170px, 170px 170px;
