--- a/index.html
+++ b/index.html
@@ -151,10 +151,10 @@
 		</div>
 
 		<!-- About Section -->
-		<div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s" 
+		<div class="container-fluid py-5 wow fadeInUp responsive-yoga-design" data-wow-delay="0.1s" 
      style="
         background-image: url('images/yoga-design-(1).png'), url('images/yoga-design-(2).png'); 
-        background-size: 170px 170px, 170px 170px; 
+        background-size: 190px 190px, 190px 190px; 
         background-position: top left, bottom right; 
         background-repeat: no-repeat, no-repeat; ">
 			<div class="container about-section">
@@ -167,7 +167,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-5 mb-2">
+					<div class="col-lg-6 mb-2">
 						<div class="about-content">
 							<h2 class="mb-4">Who We Are</h2>
 							<p class="mb-2 text-justify">At Himalayan Yoga Retreat, we invite you to embark on a transformative journey of self-discovery in the heart of Rishikesh, the "Yoga Capital of the World." Our retreat offers a unique opportunity to experience the profound physical, emotional, mental, and spiritual benefits of yoga. Guided by experienced instructors, you will deepen your practice with enriching asanas, pranayama, yoga Nidra, and cleansing yogic purification techniques, all while exploring various meditation methods.
@@ -502,7 +502,7 @@
 		</div>
 
 		<!-- Team Section -->
-		<div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s"
+		<div class="container-fluid py-5 wow fadeInUp responsive-yoga-design" data-wow-delay="0.1s"
 		style="
 		background-image: url('images/yoga-design-(1).png'), url('images/yoga-design-(2).png'); 
 		background-size: 170px 170px, 170px 170px;
