--- a/registeration.html
+++ b/registeration.html
@@ -119,7 +119,7 @@
 		</div>
 
         <!-- Registration Section -->
-        <div class="container-fluid wow fadeInUp" data-wow-delay="0.1s"
+        <div class="container-fluid wow fadeInUp responsive-yoga-design" data-wow-delay="0.1s"
         style="
         margin-top:120px; margin-bottom:120px;
         background-image: url('images/yoga-design-(1).png'), url('images/yoga-design-(2).png'); 
