--- a/contact.html
+++ b/contact.html
@@ -119,16 +119,16 @@
 		</div>
 
        <!-- Contact Section -->
-		<div class="container-fluid py-5 contact"
+		<div class="container-fluid py-5 contact responsive-yoga-design"
 		style="
 				background-image: url('images/yoga-design-(1).png'), url('images/yoga-design-(2).png'); 
 				background-size: 170px 170px, 170px 170px;
 				background-position: top left, bottom right; 
 				background-repeat: no-repeat, no-repeat; ">
     <div class="container py-5">
-        <div class="row g-5">
+        <div class="row d-flex align-items-center justify-content-center">
                         <!-- Yoga Session Details -->
-                        <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.3s">
+                        <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.3s">
                             <div class="position-relative overflow-hidden rounded-3 shadow bg-white p-0">
                                 <img src="images/contact-details.png" alt="Yoga Session" class="img-fluid w-100" style="border-top-left-radius: 10px; border-top-right-radius: 10px;">
                                 <div class="p-4 bg-theme" style="border-bottom-left-radius: 10px; border-bottom-right-radius: 10px;">
