--- a/registeration.html
+++ b/registeration.html
@@ -121,21 +121,20 @@
         <!-- Registration Section -->
         <div class="container-fluid wow fadeInUp responsive-yoga-design" data-wow-delay="0.1s"
         style="
-        margin-top:120px; margin-bottom:120px;
         background-image: url('images/yoga-design-(1).png'), url('images/yoga-design-(2).png'); 
         background-size: 170px 170px, 170px 170px; 
         background-position: top left, bottom right; 
         background-repeat: no-repeat, no-repeat;">
 
             <div class="container registration-container">
-                <div class="row g-0 d-flex align-items-center justify-content-center">
+                <div class="row g-0 d-flex align-items-center justify-content-center" style="margin-top:120px; margin-bottom:120px;">
                     <!-- Left Image Section -->
                     <div class="col-lg-5 d-none d-lg-block">
                         <img src="images/registeration.jpg" alt="Yoga Retreat" class="form-image">
                     </div>
                     <!-- Right Form Section -->
                     <div class="col-lg-7 registration-form">
-                        <h2 class="text-center mb-4">Application Form</h2>
+                        <h2 class="text-center fw-bold mb-4">Application Form</h2>
                         <form>
                             <div class="row">
                                 <div class="col-md-6 col-lg-6 mb-3">
