--- a/registeration.html
+++ b/registeration.html
@@ -196,7 +196,7 @@
                                     <textarea class="form-control" id="message" rows="4"></textarea>
                                 </div>
                             </div>
-                            <button type="submit" class="btn btn-theme theme-design">Submit Your Enrollment</button>
+                            <button type="submit" class="btn btn-theme hover-fill theme-design">Submit Your Enrollment</button>
                         </form>
                     </div>
                 </div>
