--- a/about.html
+++ b/about.html
@@ -272,57 +272,57 @@
 		</div>
 
         <!-- Team Section -->
-		<div class="container-fluid py-5 wow fadeInUp responsive-yoga-design" data-wow-delay="0.1s"
+		<div class="container-fluid py-5 wow fadeInUp team-section responsive-yoga-design" data-wow-delay="0.1s" 
 		style="
-		background-image: url('images/yoga-design-(1).png'), url('images/yoga-design-(2).png'); 
-		background-size: 170px 170px, 170px 170px;
-		background-position: top left, bottom right; 
-		background-repeat: no-repeat, no-repeat; ">
+		   background-image: url('images/yoga-design-(1).png'), url('images/yoga-design-(2).png'); 
+		   background-size: 190px 190px, 160px 160px; 
+		   background-position: top left, bottom right; 
+		   background-repeat: no-repeat, no-repeat; ">
 			<div class="container py-5">
 				<div class="section-title text-center position-relative pb-3 mb-5 mx-auto" style="max-width: 600px;">
 					<h5 class="fw-bold text-theme text-uppercase">Team Members</h5>
 					<h1 class="mb-0">Meet Our Team</h1>
 				</div>
 				<div class="row g-5">
-					<div class="col-lg-4 slideInUp" data-wow-delay="0.3s">
-						<div class="team-item hover-zoom bg-theme theme-design-high overflow-hidden">
+					<div class="col-lg-4 wow slideInUp" data-wow-delay="0.3s">
+						<div class="team-item theme-design-high bg-white shadow overflow-hidden">
 							<div class="team-img position-relative overflow-hidden">
-								<img class="img-fluid w-100" src="images/team-(1).jpg" alt="">
+								<img class="img-fluid w-100" src="images/team-(1).jpg" alt="Team Member">
 							</div>
 							<div class="text-center py-4">
-								<h4 class="text-white">Full Name</h4>
-								<p class="text-uppercase m-0 text-white">Designation</p>
+								<h4 class="fw-bold text-theme">Vikas</h4>
+								<p class="text-uppercase m-0 text-muted">Ashtanga Yoga Teacher</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-4 wow slideInUp" data-wow-delay="0.6s">
-						<div class="team-item hover-zoom bg-theme theme-design-high overflow-hidden">
+						<div class="team-item theme-design-high bg-white shadow overflow-hidden">
 							<div class="team-img position-relative overflow-hidden">
-								<img class="img-fluid w-100" src="images/team-(3).jpg" alt="">
+								<img class="img-fluid w-100" src="images/team-(2).jpg" alt="Team Member">
 							</div>
 							<div class="text-center py-4">
-								<h4 class="text-white">Full Name</h4>
-								<p class="text-uppercase m-0 text-white">Designation</p>
+								<h4 class="fw-bold text-theme">Gaurav</h4>
+								<p class="text-uppercase m-0 text-muted">Hatha Yoga Teacher</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-4 wow slideInUp" data-wow-delay="0.9s">
-						<div class="team-item hover-zoom bg-theme theme-design-high overflow-hidden">
+						<div class="team-item theme-design-high bg-white shadow overflow-hidden">
 							<div class="team-img position-relative overflow-hidden">
-								<img class="img-fluid w-100" src="images/team-(2).jpg" alt="">
+								<img class="img-fluid w-100" src="images/team-(3).jpg" alt="Team Member">
 							</div>
 							<div class="text-center py-4">
-								<h4 class="text-white">Full Name</h4>
-								<p class="text-uppercase m-0 text-white">Designation</p>
+								<h4 class="fw-bold text-theme">Subhash Singh Rawat</h4>
+								<p class="text-uppercase m-0 text-muted">Ashtanga Yoga Teacher</p>
 							</div>
 						</div>
 					</div>
 				</div>
+				
 			</div>
 		</div>
         
 		<!-- Footer Section -->
-		<hr>
 		<footer class="bg-white text-dark pt-5 pb-4">
 			<div class="container text-center text-md-left">
 				<div class="row text-center text-md-left">
