--- a/registeration.html
+++ b/registeration.html
@@ -134,7 +134,7 @@
                     </div>
                     <!-- Right Form Section -->
                     <div class="col-lg-7 registration-form">
-                        <h2 class="text-center fw-bold mb-4">Application Form</h2>
+                        <h2 class="text-center fw-bold mb-4 creative-border">Application Form</h2>
                         <form>
                             <div class="row">
                                 <div class="col-md-6 col-lg-6 mb-3">
@@ -196,7 +196,7 @@
                                     <textarea class="form-control" id="message" rows="4"></textarea>
                                 </div>
                             </div>
-                            <button type="submit" class="btn btn-theme hover-fill theme-design">Submit Your Enrollment</button>
+                            <button type="submit" class="btn hover-fill btn-theme theme-design w-100 py-2 px-4">Submit</button>
                         </form>
                     </div>
                 </div>
@@ -205,7 +205,6 @@
 
         
 		<!-- Footer Section -->
-		<hr>
 		<footer class="bg-white text-dark pt-5 pb-4">
 			<div class="container text-center text-md-left">
 				<div class="row text-center text-md-left">
